Função calcular router
Refatorado função que calcula o tempo up do router

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
 
             <p class="control">
-                <a onclick="router()" class="button is-small is-info">
+                <a onclick="buttonCalcularRouter()" class="button is-small is-info">
                     Calcular
                 </a>
             </p>
@@ -81,7 +81,7 @@
             </div>
 
             <p class="control">
-                <a class="button is-small is-info" onclick="validacao()">
+                <a class="button is-small is-info" onclick="buttonCopyValidacao()">
                     Copiar
                 </a>
             </p>
@@ -98,7 +98,7 @@
             </div>
 
             <p class="control">
-                <a class="button is-small is-info" onclick="buttonSenha()">
+                <a class="button is-small is-info" onclick="buttonCopySenha()">
                     Copiar
                 </a>
             </p>
