--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         </div>
 
         <div class="buttons are-small">
-            <button class="button is-info" onclick="limpar()">Limpar</button>
-            <button class="button is-info" onclick="log()">Log</button>
+            <button class="button is-info" onclick="buttonLimpar()">Limpar</button>
+            <button class="button is-info" onclick="buttonLog()" disabled>Log</button>
         </div>
 
 
