--- a/index.html
+++ b/index.html
@@ -45,14 +45,22 @@
                     </span>
                 </div>
             </div>
-            <div class="field">
-                <label class="label is-small">Data de normalização</label>
-                <div class="control has-icons-left has-icons-right">
+
+            <label class="label is-small">Data de Normalização</label>
+            <div class="field is-grouped">
+                <div class="control has-icons-left has-icons-right is-expanded">
                     <input id="dataNormalizacao" class="input is-small" type="text" placeholder="--/--/---- --:--:--">
                     <span class="icon is-small is-left">
                         <i class="fas fa-calendar-check"></i>
                     </span>
                 </div>
+
+                <p class="control">
+                    <a class="button is-small is-info" onclick="buttonCopyDataNormalizacao()">
+                        Copiar
+                    </a>
+                </p>
+
             </div>
 
 
