Botão Falha no PABX
Configurado botão Falha no PABX do Cliente

Close #2

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <button class="button is-small is-fullwidth gap-button" onclick="buttonRedeaManobra()">Redea - Manobra</button>
 
             <p>Voz</p>
-            <button class="button is-small is-fullwidth gap-button" onclick="buttonRedeaManobra()" disabled>Falha no PABX</button>
+            <button class="button is-small is-fullwidth gap-button" onclick="buttonFalhaPABX()">Falha no PABX</button>
 
             <div class="field" style="margin-top: 15px;">
                 <div class="control">
